@@ -4,10 +4,6 @@
  * @ingroup Profiler
  */
 
-if ( !class_exists( 'ProfilerSimple' ) ) {
-	require_once( dirname( __FILE__ ) . '/ProfilerSimple.php' );
-}
-
 /**
  * ProfilerSimpleUDP class, that sends out messages for 'udpprofile' daemon
  * (the one from mediawiki/trunk/udpprofile SVN )
